@@ -1,3 +1,8 @@
+2011-09-08 Riccardo Mottola <rm@gnu.org>
+
+	* Framework/PCAddFilesPanel.m [-setFileTypes]:
+	use setAllowedFileTypes method instead of private method which was removed
+
 2011-04-28 Riccardo Mottola <rm@gnu.org>
 
 	* Framework/PCFileManager.m:
